# capstone1

./: .gitignore
.catkin_tools/profiles/default/: devel_collisions.txt
bashes/: bash_generator.bash  build.bash  hello.bash  run_line_follower.bash  run_turtlebot3.bash
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/lib/pkgconfig/: gazebo_ros_actor_plugin.pc  turtlebot3_fake.pc  turtlebot3_gazebo.pc  turtlebot3_line_follower.pc
devel/lib/turtlebot3_fake/: turtlebot3_fake_node
devel/lib/turtlebot3_gazebo/: turtlebot3_drive
devel/share/gazebo_ros_actor_plugin/cmake/: gazebo_ros_actor_pluginConfig.cmake
devel/share/turtlebot3_fake/cmake/: turtlebot3_fakeConfig.cmake
devel/share/turtlebot3_gazebo/cmake/: turtlebot3_gazeboConfig.cmake
src/: start_turtlebot3.sh
src/.yolov5_ros_backup/: CMakeLists.txt  package.xml
src/.yolov5_ros_backup/msg/: DetectionArray.msg  ObjectDetection.msg
src/.yolov5_ros_backup/src/: detect2.py
src/actor_line_follower/: CMakeLists.txt  package.xml
src/actor_line_follower/config/worlds/: move_actor.world  my.world  one_line.world  world.world  world2.world
src/actor_line_follower/config/worlds/sideblock/: model.sdf
src/actor_line_follower/launch/: real.launch  sim.launch
src/actor_line_follower/scripts/: controller.py  detector.py  detector_backup.py  follower.py  follower_bakcup.py  motion.py  path_publisher.py
src/actor_line_follower/src/: actor_command.cpp
src/ddynamic_reconfigure/git/: config  index  packed-refs
src/detection_msgs/git/: config  index  packed-refs
src/gazebo-ros-actor-plugin/git/: config  index  packed-refs
src/gazebo-ros-actor-plugin/launch/: sim.launch
src/gazebo-ros-actor-plugin/scripts/: path_publisher.py
src/realsense-ros/git/: HEAD  config  index  packed-refs
src/tmp_turtlebot3_line_follwer/launch/: line_follower.launch  tmp.xml
src/turtlebot3_line_follower/: CMakeLists.txt  diff.txt
src/turtlebot3_line_follower/git/: config  index  packed-refs
src/turtlebot3_line_follower/recordings/: detection.avi
src/turtlebot3_line_follower/scripts/: controller.py  detector.py  follower.py  motion.py
src/turtlebot3_line_follower/world/: BACKUP_world.world
src/turtlebot3_simulations/git/: config  index  packed-refs
src/yolov5_ros/: CMakeLists.txt
src/yolov5_ros/git/: config  index  packed-refs
src/yolov5_ros/launch/: yolov5.launch  yolov5_d435.launch
src/yolov5_ros/src/: detector.py
worlds/: cafe.world  moonwalk.world  run.world  run_repeat.world  walk_animation.world
worlds/sideblock_maze/: model.config  model.sdf
worlds/sideblock_path/: model.config  model.sdf
(+34 files in other folders)
