<?xml version="1.0"?>
<package format="2">
  <name>actor_line_follower</name>
  <version>0.0.0</version>
  <description>Gazebo 11 plugin to control actors using either position or velocity commands</description>
  <maintainer email="animesh@blackcoffeerobotics.com">Animesh Singhal</maintainer>
  <maintainer email="gaurav@blackcoffeerobotics.com">Gaurav Gupta</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <build_depend>detection_msgs</build_depend>
  <build_depend>opencv-python</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>numpy</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>opencv-python</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>numpy</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>detection_msgs</build_export_depend>
  <exec_depend>opencv-python</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>detection_msgs</exec_depend>

  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
</package>
